# Sakura

./: .cache  .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  FEATURE_WIRING_MATRIX.md  FIX_LOG.md  MISSING_OR_HALF_BUILT_FEATURES.md  README.md  RUNTIME_FLOW_TRACE.md  V13_AUDIT_REPORT.md  build_bundle.ps1  check_api_health.py  docker-compose.yml  index.html  rebuild_backend_binary.ps1  run_background.vbs  script.js  setup.ps1  setup.sh  style.css  test_oneshot_routing.py  test_v18_fixes.py  toggle_startup.ps1  uninstall.ps1  verify_shutdown.py
audit/: README.md  (+23 more)
backend/: .env.example  DEPENDENCY_AUDIT.md  Dockerfile  PHASE_3_RESULTS.md  RELIABILITY_STATUS_REPORT.md  TECHNICAL_RELIABILITY_V19.md  anime_recommendation.md  auth_google.py  backend.spec  config.json  first_run_setup.py  first_setup.py  gpu_info.txt  last_test_run.txt  pyproject.toml  pytest_output.txt  requirements-docker.txt  requirements.txt  server.py  small_diff.txt
backend/data/: .last_crystallization  bookmarks.json  conversation_history.json  conversation_history.json.sha256  desire_state.json  dream_journal.jsonl  flight_recorder.jsonl  memory_metadata.json.sha256  planned_initiations.json  summary_memory.json  user_settings.json  world_graph.json
backend/docker/: python-sandbox.Dockerfile
backend/hooks/: hook-csvw.py  hook-espeakng_loader.py  hook-kokoro.py  hook-language_tags.py  hook-misaki.py  hook-phonemizer.py  hook-segments.py
backend/observability/: dashboard.py
backend/sakura_assistant/: __init__.py  config.py  version.py
backend/scripts/: audit_v15.py  fresh_start.py
(+419 files in other folders)
